--- a/.gitignore
+++ b/.gitignore
@@ -9,3 +9,4 @@ anu.code-workspace
 anu-examples/package-lock.json
 anu-examples/package.json
 anu-examples/vite.config.js
+anu-examples/package.json
